[gd_scene load_steps=4 format=2]

[ext_resource path="res://SRC/Level/Panel/Machine.gd" type="Script" id=1]
[ext_resource path="res://Assets/MachineTheme.tres" type="Theme" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.741176, 0.741176, 0.741176, 1 )

[node name="Machine" type="Node2D"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 32.0
margin_bottom = 32.0
theme = ExtResource( 2 )
custom_styles/panel = SubResource( 1 )

[connection signal="gui_input" from="Panel" to="." method="_on_Panel_gui_input"]
[connection signal="mouse_entered" from="Panel" to="." method="_on_Panel_mouse_entered"]
[connection signal="mouse_exited" from="Panel" to="." method="_on_Panel_mouse_exited"]
